<!--
  ~ StudyStay © 2024
  ~
  ~ All rights reserved.
  ~
  ~ This software and associated documentation files (the "Software") are owned by StudyStay. Unauthorized copying, distribution, or modification of this Software is strictly prohibited.
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this Software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~
  ~ StudyStay
  ~ José María Pozo Hidalgo
  ~ Email: josemariph7@gmail.com
  ~
  ~
  -->

<resources>
    <string name="app_name">StudyStay</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <string name="hintPhone">Phone</string>
    <string name="hintSurnames">Surnames</string>
    <string name="hintDNI">DNI</string>"
    <string name="hintName">Name</string>"
    <string name="hintGender">Gender</string>"


    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="post_accommodation">Post Accommodation</string>
    <string name="chat">Chat</string>
    <string name="forum">Forum</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>



        <string-array name="cities_array">
            <item>All</item>
            <item>Albacete</item>
            <item>Alicante</item>
            <item>Almería</item>
            <item>Ávila</item>
            <item>Badajoz</item>
            <item>Barcelona</item>
            <item>Burgos</item>
            <item>Cáceres</item>
            <item>Cádiz</item>
            <item>Castellón de la Plana</item>
            <item>Ciudad Real</item>
            <item>Córdoba</item>
            <item>Cuenca</item>
            <item>Girona</item>
            <item>Granada</item>
            <item>Guadalajara</item>
            <item>Huelva</item>
            <item>Huesca</item>
            <item>Jaén</item>
            <item>León</item>
            <item>Lleida</item>
            <item>Logroño</item>
            <item>Las Palmas de Gran Canaria</item>
            <item>Madrid</item>
            <item>Málaga</item>
            <item>Murcia</item>
            <item>Palencia</item>
            <item>Pontevedra</item>
            <item>Salamanca</item>
            <item>Santa Cruz de Tenerife</item>
            <item>Segovia</item>
            <item>Sevilla</item>
            <item>Soria</item>
            <item>Tarazona</item>
            <item>Teruel</item>
            <item>Toledo</item>
            <item>Valencia</item>
            <item>Valladolid</item>
            <item>Vitoria-Gasteiz</item>
            <item>Zamora</item>
            <item>Zaragoza</item>
        </string-array>

        <string-array name="capacity_array">
            <item>All</item>
            <item>1</item>
            <item>2</item>
            <item>3</item>
            <item>4</item>
            <item>5</item>
            <item>6</item>
            <item>7</item>
            <item>8</item>
            <item>9</item>
            <item>10</item>
        </string-array>

</resources>