<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/SadBlue"
    tools:context=".view.MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldEmail"
        style="@style/CustomTextInputLayout"
        android:layout_width="332dp"
        android:layout_height="61dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="40dp"
        android:hint="@string/hintEmail"
        app:boxStrokeColor="@color/LightBlue"
        app:cursorColor="@color/SadBlue"
        app:hintTextColor="@color/SadBlue"
        tools:ignore="ExtraText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/SadBlue"
            android:background="@drawable/rounded_edit_text_light"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            style="@style/CustomTextInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldPassword"
        style="@style/CustomTextInputLayout"
        android:layout_width="331dp"
        android:layout_height="64dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="325dp"
        android:layout_marginEnd="41dp"
        android:hint="@string/hintPassword"
        app:boxStrokeColor="@color/LightBlue"
        app:cursorColor="@color/SadBlue"
        app:hintTextColor="@color/SadBlue">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text_light"
            android:textColor="@color/SadBlue"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical"
            style="@style/CustomTextInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="223dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logotransparente" />

    <Button
        android:id="@+id/LogInButton"
        style="@style/Widget.Material3.Button.IconButton.Filled"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginVertical="420dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:backgroundTint="@color/LightBlue"
        android:text="Sign In"
        android:textColor="@color/SadBlue"
        android:textSize="20sp" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <FrameLayout
            android:id="@+id/bottom_sheet"
            android:layout_width="match_parent"
            android:layout_height="1351dp"
            android:background="@drawable/registerradius"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/registerButton"
                style="@style/Widget.Material3.Button.IconButton.Filled"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginVertical="725dp"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:backgroundTint="@color/SadBlue"
                android:text="Sign Up"
                android:textColor="@color/LightBlue"
                android:textSize="20sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldNameSignUp"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="100dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="252dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/hintName"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_edit_text_dark"
                    android:backgroundTint="@color/SadBlue"
                    style="@style/CustomTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldEmailSignUp"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="420dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/hintEmail"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/SadBlue"
                    android:background="@drawable/rounded_edit_text_dark"
                    style="@style/CustomTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldSurnamesignUp"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="180dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/hintSurnames"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/SadBlue"
                    android:background="@drawable/rounded_edit_text_dark"
                    style="@style/CustomTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPhoneSignUp"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="500dp"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:hint="@string/hintPhone"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/SadBlue"
                    android:background="@drawable/rounded_edit_text_dark"
                    style="@style/CustomTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldPasswordSignUp"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="260dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/hintPassword"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/SadBlue"
                    android:background="@drawable/rounded_edit_text_dark"
                    style="@style/CustomTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldDNISignUp"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="340dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/hintDNI"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/SadBlue"
                    android:background="@drawable/rounded_edit_text_dark"
                    style="@style/CustomTextInputEditText" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="81dp"
                android:layout_marginVertical="7dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="Sign Up For Free"
                android:textColor="@color/SadBlue"
                android:textSize="30sp"
                android:textStyle="normal" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayoutBirthDate"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="61dp"
                android:layout_marginVertical="570dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="Birth Date"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/white"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue"
                tools:ignore="ExtraText">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextBirthDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="false"
                    android:backgroundTint="@color/SadBlue"
                    android:background="@drawable/rounded_edit_text_dark"
                    android:textColor="@color/LightBlue"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldGender"
                style="@style/CustomTextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginVertical="640dp"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:background="@color/SadBlue"
                android:backgroundTint="@color/SadBlue"
                android:hint="@string/hintGender"
                android:textColorHint="@color/LightBlue"
                app:boxStrokeColor="@color/LightBlue"
                app:cursorColor="@color/LightBlue"
                app:hintTextColor="@color/LightBlue">

                <Spinner
                    android:id="@+id/spinnerGender"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/SadBlue"
                    android:outlineAmbientShadowColor="@color/SadBlue" />

            </com.google.android.material.textfield.TextInputLayout>

        </FrameLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</RelativeLayout>
